# useinvoke-site

./: .env.example  .env.local  LICENSE  README.md  README_SMS.md  agents.json  airtable_export.py  devbox.config.json  index.html  main.py  middleware.ts  next.config.js  package-lock.json  package.json  privacy.html  pyproject.toml  requirements.txt  sms_webhook_new.py  start.bat  start_simple_web.bat  start_web.bat  terms.html  test_airtable_tables.py  version_history.json
.github/workflows/: deploy.yml
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
ai_orchestrator/: __init__.py  __main__.py  devbox_config.py  life_bootstrap.py
ai_orchestrator/agents/: classifier_agent.py  task_runner_agent.py
ai_orchestrator/ai_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+1 more)
app/: globals.css  layout.tsx  page.tsx
components/: PhoneInput.tsx  iPhoneFrame.tsx
data_exports/: Agent Activity.csv  Features.csv  Logs.csv  Project Updates.csv  Tasks.csv  Team Members.csv  field_metadata.csv  milestones.csv  table_metadata.csv
external_data_ingest/: Companies.csv  sample_task_sync.csv  task_updates_for_airtable.csv
lib/: invoke.ts  supabase.ts
web_interface/: __init__.py  main.py  requirements.txt  run.py  simple_app.py
(+132 files in other folders)
