[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "AI Agent Orchestrator CLI: Route and manage AI agents from the command line or interactively."
authors = [{name = "Kyle B"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "python-dotenv",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/ai-orchestrator"

[project.scripts]
ai-orchestrator = "ai_orchestrator.main:run"

[tool.setuptools.packages.find]
where = ["ai_orchestrator"]
